added target blank to links

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ border: solid 2px;
     <p>Is any information about an individual which can be used to distinguish or trace an individual's identity such as name, Social Security Number (SSN), date and place of birth, mother's maiden name, and biometric records.</p>
     <p>This includes but is not limited to, education records, financial transactions, medical files, criminal records, or employment history.</p>
     <p>For more information go to:</p>
-    <a href="https://www.rmda.army.mil/privacy/PII/PII.html">https://www.rmda.army.mil/privacy/PII/PII.html</a>
+    <a href="https://www.rmda.army.mil/privacy/PII/PII.html" target="_blank">https://www.rmda.army.mil/privacy/PII/PII.html</a>
     </details>
   </details>
   <br>
@@ -274,10 +274,10 @@ border: solid 2px;
   <input list="colorEye" id="smColorEye">
   <br>
   <label for="smHeight">Height:</label>
-  <input type="number" id="smHeight" min=0 placeholder='60 in'>
+  <input type="number" id="smHeight" min=0 placeholder='87 in'>
   <br>
   <label for="smWeight">Weight:</label>
-  <input type="number" id="smWeight" min=0 placeholder="150 lbs">
+  <input type="number" id="smWeight" min=0 placeholder="234 lbs">
   <br>
   <label for="smBlood">Blood type:</label>
   <select id="smBlood">
@@ -331,9 +331,9 @@ border: solid 2px;
       </dl>
     </fieldset>
     <p>For more information go to:</p>
-    <a href="https://obamawhitehouse.archives.gov/omb/fedreg_1997standards">https://obamawhitehouse.archives.gov/omb/fedreg_1997standards</a>
-    <br><a href="https://www.census.gov/topics/population/race.html">https://www.census.gov/topics/population/race.html</a>
-    <br><a href="https://www.census.gov/topics/population/hispanic-origin.html">https://www.census.gov/topics/population/hispanic-origin.html</a>
+    <a href="https://obamawhitehouse.archives.gov/omb/fedreg_1997standards" target="_blank">https://obamawhitehouse.archives.gov/omb/fedreg_1997standards</a>
+    <br><a href="https://www.census.gov/topics/population/race.html" target="_blank">https://www.census.gov/topics/population/race.html</a>
+    <br><a href="https://www.census.gov/topics/population/hispanic-origin.html" target="_blank">https://www.census.gov/topics/population/hispanic-origin.html</a>
     <br>
   </details>
   
@@ -352,9 +352,9 @@ border: solid 2px;
       </dl>
     </fieldset>
     <p>For more information go to:</p>
-    <a href="https://obamawhitehouse.archives.gov/omb/fedreg_1997standards">https://obamawhitehouse.archives.gov/omb/fedreg_1997standards</a>
-    <br><a href="https://www.census.gov/topics/population/race.html">https://www.census.gov/topics/population/race.html</a>
-    <br><a href="https://www.census.gov/topics/population/hispanic-origin.html">https://www.census.gov/topics/population/hispanic-origin.html</a>
+    <a href="https://obamawhitehouse.archives.gov/omb/fedreg_1997standards" target="_blank">https://obamawhitehouse.archives.gov/omb/fedreg_1997standards</a>
+    <br><a href="https://www.census.gov/topics/population/race.html" target="_blank">https://www.census.gov/topics/population/race.html</a>
+    <br><a href="https://www.census.gov/topics/population/hispanic-origin.html" target="_blank">https://www.census.gov/topics/population/hispanic-origin.html</a>
     <br>
   </details>
   
@@ -903,15 +903,15 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <ul>
     <li>Orders bringing you to FH</li>
     <li>LES</li>
-    <a href="https://mypay.dfas.mil/">myPay - LES, TSP, W2</a>
+    <a href="https://mypay.dfas.mil/" target="_blank">myPay - LES, TSP, W2</a>
     <br><br>
     <li>DD1172</li>
     <br>DEERS enrollment of your family members. If you don't have an official form, you should set an appointment.
-    <br><a href="https://idco.dmdc.osd.mil/idco/">DEERS-RAPIDS ID Card Office Online</a>
+    <br><a href="https://idco.dmdc.osd.mil/idco/" target="_blank">DEERS-RAPIDS ID Card Office Online</a>
 <br>If setting the appointment gives you an error, try removing the dashes from your phone number.
     <br>
     <br>However, to prevent delays in the process, if your family members have an ID you can go to:
-    <br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
+    <br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1" target="_blank">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
     <br>Then go to: Print Family List. I'll give you a digital DD1172.
     
     
@@ -944,12 +944,12 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><a href="tel:520-533-0906">520-533-0906</a><label> - Co CQ Phone</label>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 <br>
-<br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP">https://discord.gg/wTem24TpZP</a>
+<br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP" target="_blank">https://discord.gg/wTem24TpZP</a>
 <br>
-<br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing">CQ Roster</a>
+<br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing" target="_blank">CQ Roster</a>
 <br>
-<br><a href="https://drive.google.com/file/d/1cxJZJdY__zD-8vRS9M1fuRBmPB7D7ao1/view?usp=sharing">Hold Co SOP - Barracks</a>
-<br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing">Hold Co SOP - Company</a>
+<br><a href="https://drive.google.com/file/d/1cxJZJdY__zD-8vRS9M1fuRBmPB7D7ao1/view?usp=sharing" target="_blank">Hold Co SOP - Barracks</a>
+<br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing" target="_blank">Hold Co SOP - Company</a>
 <br>
 
 <br>
@@ -977,32 +977,32 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <details open><summary>Ft. Huachuca</summary>
 <br>
 
-<br><a href="https://home.army.mil/huachuca/index.php">Fort Huachuca official web page (General Orders & Policies)</a>
+<br><a href="https://home.army.mil/huachuca/index.php" target="_blank">Fort Huachuca official web page (General Orders & Policies)</a>
 <br>
 
-<br><a href="https://www.facebook.com/FMWRFortHuachuca/">Fort Huachuca MWR - Facebook page</a>
-<br><a href="https://huachuca.armymwr.com/">Fort Huachuca MWR - Army page</a>
+<br><a href="https://www.facebook.com/FMWRFortHuachuca/" target="_blank">Fort Huachuca MWR - Facebook page</a>
+<br><a href="https://huachuca.armymwr.com/" target="_blank">Fort Huachuca MWR - Army page</a>
 <br>most activities on post are driven by MWR, if you want to known what activities might be happening in and around post, visit their page.
 <br>
-<br><a href="https://www.facebook.com/groups/529117777235614">Fort Huachuca AIT Support Group</a>
+<br><a href="https://www.facebook.com/groups/529117777235614" target="_blank">Fort Huachuca AIT Support Group</a>
 
 <br>
-<br><a href="https://jpp.whs.mil/Public/docs/RFI/Set_1/Encl6-12/RFI_Enclosure_Q07_USA">FH Regulation 600-50</a>
+<br><a href="https://jpp.whs.mil/Public/docs/RFI/Set_1/Encl6-12/RFI_Enclosure_Q07_USA" target="_blank">FH Regulation 600-50</a>
 <br>If you can't find it there, let me know.
 
 
 <br>
 <br><a href="111th MI BDE Facebook page
-https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">111th MI BDE Facebook page</a>
+https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/" target="_blank">111th MI BDE Facebook page</a>
 <br>
-<br><a href="https://www.facebook.com/309THMIBN/">309th MI BN Facebook page</a>
+<br><a href="https://www.facebook.com/309THMIBN/" target="_blank">309th MI BN Facebook page</a>
 
 <br>
 <br>
 <details><summary>35T</summary>
 <label>CQ Phone: </label><a href="tel:520-533-6401">520-533-6401</a>
 <br><label>Co Email: </label><a href="mailto:charlie309th@gmail.com">charlie309th@gmail.com</a>
-<br><a href="https://www.facebook.com/ComancheCompany309th">C Co, 309th Facebook page</a>
+<br><a href="https://www.facebook.com/ComancheCompany309th" target="_blank">C Co, 309th Facebook page</a>
 
 <br>
 <br>309th BN Moto: Sentinels of Security
@@ -1032,7 +1032,7 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br><a href="tel:520-533-6709">520-533-6709</a>
 <br><a href="tel:520-533-5970">520-533-5970</a>
 <br><a href="tel:520-538-0043">520-538-0043</a>
-<br>Location: <a href="https://maps.google.com/maps?q=31.564339,-110.341770">https://maps.google.com/maps?q=31.564339,-110.341770</a>
+<br>Location: <a href="https://maps.google.com/maps?q=31.564339,-110.341770" target="_blank">https://maps.google.com/maps?q=31.564339,-110.341770</a>
 
 <br>
 <br><a href="tel:520-533-9165">520-533-9165</a><label> - WAC (Weekend Clinic)</label>: Sat 0700-1600 (Closed because of COVID)
@@ -1069,7 +1069,7 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br>Housing
 <br><a href="tel:520-515-9000">520-515-9000</a>
 <br><a href="tel:520-533-3083">520-533-3083</a>
-<br><a href="https://www.mountainvistacommunities.com">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
+<br><a href="https://www.mountainvistacommunities.com" target="_blank">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
 
 <br><br>Transportation:
 <br><a href="tel:520-533-2207">520-533-2207</a>
@@ -1115,7 +1115,7 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br><a href="tel:520-732-3760">520-732-3760</a><label> - Duty Cell</label>
 <br><a href="mailto:anthony.b.feige.mil@mail.mil">anthony.b.feige.mil@mail.mil</a>
 <br>
-<br><a href="https://www.instagram.com/rapid_bde">https://www.instagram.com/rapid_bde</a>
+<br><a href="https://www.instagram.com/rapid_bde" target="_blank">https://www.instagram.com/rapid_bde</a>
 <br>
 
 <br><br>Facilities:
@@ -1126,7 +1126,7 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>
 <br>Hours: M, Tu, W, F: 0830-1630; Th: 1330-1630
 <br><a href="mailto:usarmy.huachuca.icoe.mbx.inspector-general@mail.mil">usarmy.huachuca.icoe.mbx.inspector-general@mail.mil</a>
-<br><a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG">IG Website</a>
+<br><a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG" target="_blank">IG Website</a>
 <br>Services: Violations of Regulations/Policy,
 <br>reach to the agencies to get the right processes (to get BAH, FSA, correct pay, etc),
 <br>entitlements, reprisal
@@ -1188,17 +1188,19 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br><a href="tel:1-800-273-8255">1-800-273-8255</a>
 <br>Text: <a href="sms:838255">838255</a>
 
-<br><br>1-800-342-9647 - Military One Source (Confidential, 24/7)
-</label>
-<br><a href="tel:520-533-">520-533-</a>
-<br><a href="tel:520-533-">520-533-</a>
-<br>1-800-464-8107
+<br><br>Military One Source (Confidential, 24/7)
+<br><a href="tel:1-800-342-9647">1-800-342-9647</a>
+<br><a href="tel:1-800-464-8107">1-800-464-8107</a>
+<br>
 
 <br>
-<br>1-866-495-6735 - AZ Complete Health (24/7) - TTY: 711
-<br>1-866-780-9758 - Alcoholic Anonymous
-<br>520-459-0031 - Alcoholic Anonymous Cochise County
-<br>520-538-1311 / 1315 - Substance Abuse (ASAP)
+<br><a href="tel:1-866-495-6735">520-533-</a><label> - AZ Complete Health (24/7)</label>
+<br>TTY: <a href="sms:711">711</a>
+<br><a href="tel:1-866-780-9758">1-866-780-9758</a><label> - Alcoholic Anonymous</label>
+<br><a href="tel:520-459-0031">520-459-0031</a><label> - Alcoholic Anonymous Cochise County</label>
+<br><a href="tel:520-538-1311">520-538-1311</a><label> - Substance Abuse (ASAP)</label>
+<br><a href="tel:520-538-1315">520-538-1315</a><label> - Substance Abuse (ASAP)</label>
+
 
 
 <br><a href="tel:520-533-">520-533-</a><label> - </label>
@@ -1224,8 +1226,8 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br>1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
 <br>
 
-<br><a href="https://www.facebook.com/HuachucaHospitalityHouse">https://www.facebook.com/HuachucaHospitalityHouse</a>
-<br><a href="https://www.instagram.com/huachucahospitalityhouse">https://www.instagram.com/huachucahospitalityhouse</a>
+<br><a href="https://www.facebook.com/HuachucaHospitalityHouse" target="_blank">https://www.facebook.com/HuachucaHospitalityHouse</a>
+<br><a href="https://www.instagram.com/huachucahospitalityhouse" target="_blank">https://www.instagram.com/huachucahospitalityhouse</a>
 <br>
 
 
@@ -1240,56 +1242,23 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">1
 <br><br>
 
 <br>
-<br>CIF:
-https://maps.google.com/maps?q=31.563130,-110.313962
-
-Bliss:
-https://maps.google.com/maps?q=31.548841,-110.352132
-
-Bliss (specialty clinics):
-https://maps.google.com/maps?q=31.549320,-110.352721
-
-Ed center:
-https://maps.google.com/maps?q=31.559215,-110.352962
-
-JAG:
-https://maps.google.com/maps?q=31.557853,-110.355510
-
-Whitside Hall:
-https://maps.google.com/maps?q=31.554168,-110.361205
-
-Mail (pickup):
-https://maps.google.com/maps?q=31.549881,-110.368520
-
-SFL-TAP:
-https://maps.google.com/maps?q=31.550440,-110.368767
-
-TMAC:
-https://maps.google.com/maps?q=31.553448,-110.328368
-
-Murr:
-https://maps.google.com/maps?q=31.559242,-110.357346
-
-111th MI BDE:
-https://maps.google.com/maps?q=31.556927,-110.358357
-
-Transportation/Housing:
-https://maps.google.com/maps?q=31.554725,-110.353461
-
-O'Neil Hall:
-https://maps.google.com/maps?q=31.565838,-110.348074
-
-Friedman Hall:
-https://maps.google.com/maps?q=31.564004,-110.344256
-
-Davis Hall:
-https://maps.google.com/maps?q=31.563346,-110.346873
-
-Goddard Hall:
-https://maps.google.com/maps?q=31.561408,-110.345105
-
-Herrera Field:
-https://maps.google.com/maps?q=31.549915,-110.339767
+<br><a href="https://maps.google.com/maps?q=31.563130,-110.313962" target="_blank">CIF</a>
+<br><a href="https://maps.google.com/maps?q=31.548841,-110.352132" target="_blank">Bliss</a>
+<br><a href="https://maps.google.com/maps?q=31.549320,-110.352721" target="_blank">Bliss (specialty clinics)</a>
+<br><a href="https://maps.google.com/maps?q=31.559215,-110.352962" target="_blank">Education center</a>
+<br><a href="https://maps.google.com/maps?q=31.557853,-110.355510" target="_blank">JAG</a>
+<br><a href="https://maps.google.com/maps?q=31.554168,-110.361205" target="_blank">Whitside Hall</a>
+<br><a href="https://maps.google.com/maps?q=31.549881,-110.368520" target="_blank">Mail (pickup)</a>
+<br><a href="https://maps.google.com/maps?q=31.550440,-110.368767" target="_blank">SFL-TAP</a>
+<br><a href="https://maps.google.com/maps?q=31.553448,-110.328368" target="_blank">TMAC</a>
+<br><a href="https://maps.google.com/maps?q=31.559242,-110.357346" target="_blank">Murr</a>
+<br><a href="https://maps.google.com/maps?q=31.556927,-110.358357" target="_blank">111th MI BDE</a>
+<br><a href="https://maps.google.com/maps?q=31.554725,-110.353461" target="_blank">Transportation/Housing</a>
+<br><a href="https://maps.google.com/maps?q=31.565838,-110.348074" target="_blank">O'Neil Hall</a>
+<br><a href="https://maps.google.com/maps?q=31.564004,-110.344256" target="_blank">Friedman Hall</a>
+<br><a href="https://maps.google.com/maps?q=31.563346,-110.346873" target="_blank">Davis Hall</a>
+<br><a href="https://maps.google.com/maps?q=31.561408,-110.345105" target="_blank">Goddard Hall</a>
+<br><a href="https://maps.google.com/maps?q=31.549915,-110.339767" target="_blank">Herrera Field</a>
 
 
 
