--- a/index.html
+++ b/index.html
@@ -839,11 +839,11 @@ border: solid 2px;
 
 
 <br><br>
-<fieldset><details><summary>Do's & Dont's</summary>
+<fieldset><details open><summary>Do's & Dont's</summary>
 <fieldset><legend>Do's</legend>
 <ul>
     <li>You may go to the shoppette or order food after 1830 on duty days.</li>
-    <li>You might go to the post office or dry cleaners during the duty day with permission from the DS.</li>
+    <li>You may go to the post office or dry cleaners during the duty day with permission from the DS.</li>
 </ul>
 </fieldset>
 <fieldset><legend>Dont's</legend>
@@ -868,7 +868,7 @@ border: solid 2px;
 
 <br>Sick Call (SC):
 <br>-Must have a new SC slip signed by DS
--Must sign out in ‘Sick Call Roster’ (including battle buddy), not on CQ Sign out/in roster
+<br>-Must sign out in ‘Sick Call Roster’ (including battle buddy), not on CQ Sign out/in roster
 <br>-Must turn in SC slip to DS
 <br>-Illness: NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
 <br>-Injury:  NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
@@ -1235,13 +1235,16 @@ https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/" t
 <br>If you need to talk with a chaplain, let a DS know so we can schedule your meeting/appointment. 
 <br>You DON'T need to disclose the reason you want to meet. 
 <br><br>
-<br>808-291-7882 - Chaplain (Confidential) (309th, CPT Gaskin)
-<br>520-533-2291 / 8774 - On-Call Chaplain (Confidential)
+<br>309th, CPT Gaskin
+<br>
+<br>On-Call Chaplain (Confidential)
+<br><a href="tel:520-533-2291">520-533-2291</a>
+<br><a href="tel:520-533-8774">520-533-8774</a>
 
 
 <br><br>
 
-<br>
+<br>Locations:
 <br><a href="https://maps.google.com/maps?q=31.563130,-110.313962" target="_blank">CIF</a>
 <br><a href="https://maps.google.com/maps?q=31.548841,-110.352132" target="_blank">Bliss</a>
 <br><a href="https://maps.google.com/maps?q=31.549320,-110.352721" target="_blank">Bliss (specialty clinics)</a>
