--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-  * { background: white; color: black; }
+  * { background: lightgray; color: black; }
 }
 
 
