--- a/index.html
+++ b/index.html
@@ -992,8 +992,7 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 
 
 <br>
-<br><a href="111th MI BDE Facebook page
-https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/" target="_blank">111th MI BDE Facebook page</a>
+<br><a href="https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/" target="_blank">111th MI BDE Facebook page</a>
 <br>
 <br><a href="https://www.facebook.com/309THMIBN/" target="_blank">309th MI BN Facebook page</a>
 
