--- a/index.html
+++ b/index.html
@@ -944,6 +944,10 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><a href="tel:520-533-0906">520-533-0906</a><label> - Co CQ Phone</label>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 <br>
+
+<br><a href="https://www.facebook.com/groups/479906796509454">Hold Co Facebook page</a>
+
+<br>
 <br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP" target="_blank">https://discord.gg/wTem24TpZP</a>
 <br>
 <br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing" target="_blank">CQ Roster</a>
