--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ border: solid 2px;
       <option value="Reserve">Reserve</option>
   </select>
   <br>
-  <label for="smNGARState">NG/AR State:</label>
+  <label for="smNGARState">NG/AR State (two letter) :</label>
   <input list="usStates" id="smNGARState">
   <br>
   <details>
@@ -443,7 +443,7 @@ border: solid 2px;
   <label for="smPOBCity">Place of Birth (PoB) City:</label>
   <input type="text" id="smPOBCity">
   <br>
-  <label for="smPOBState">PoB State/Country:</label>
+  <label for="smPOBState">PoB State (two letter) or Country (if you were born outside of US):</label>
   <input type="text" id="smPOBState">
   <br>
   <br>
@@ -453,7 +453,7 @@ border: solid 2px;
   <label for="smHORCity">HoR City:</label>
   <input type="text" id="smHORCity">
   <br>
-  <label for="smHORState">HoR State:</label>
+  <label for="smHORState">HoR State (two letter):</label>
   <input type="text" id="smHORState">
   <br>
   <label for="smHORZip">HoR Zip:</label>
@@ -466,7 +466,7 @@ border: solid 2px;
   <label for="smLOCCity">Local City:</label>
   <input type="text" id="smLOCCity">
   <br>
-  <label for="smLOCState">Local State:</label>
+  <label for="smLOCState">Local State (two letter):</label>
   <input type="text" id="smLOCState">
   <br>
   <label for="smLOCZip">Local Zip:</label>
@@ -507,7 +507,7 @@ border: solid 2px;
   <label for="nok1City">City:</label>
   <input type="text" id="nok1City">
   <br>
-  <label for="nok1State">State:</label>
+  <label for="nok1State">State (two letter):</label>
   <input type="text" id="nok1State">
   <br>
   <label for="nok1Zip">Zip:</label>
@@ -546,7 +546,7 @@ border: solid 2px;
   <label for="nok2City">City:</label>
   <input type="text" id="nok2City">
   <br>
-  <label for="nok2State">State:</label>
+  <label for="nok2State">State (two letter):</label>
   <input type="text" id="nok2State">
   <br>
   <label for="nok2Zip">Zip:</label>
@@ -571,7 +571,7 @@ border: solid 2px;
   <label for="smPOV1Plate">Plate:</label>
   <input type="text" id="smPOV1Plate">
   <br>
-  <label for="smPOV1State">State:</label>
+  <label for="smPOV1State">State (two letter):</label>
   <input type="text" id="smPOV1State">
   <br>
   <label for="smPOV1DateReg">Registration Expiration Date:</label>
@@ -600,7 +600,7 @@ border: solid 2px;
   <label for="smPOV2Plate">Plate:</label>
   <input type="text" id="smPOV2Plate">
   <br>
-  <label for="smPOV2State">State:</label>
+  <label for="smPOV2State">State (two letter):</label>
   <input type="text" id="smPOV2State">
   <br>
   <label for="smPOV2DateReg">Registration Expiration Date:</label>
@@ -650,7 +650,7 @@ border: solid 2px;
   <label for="dep1City">City:</label>
   <input type="text" id="dep1City">
   <br>
-  <label for="dep1State">State:</label>
+  <label for="dep1State">State (two letter):</label>
   <input type="text" id="dep1State">
   <br>
   <label for="dep1Zip">Zip:</label>
