--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ border: solid 2px;
 <br><br>
 
 <p>Send your JSON file to: 
-  <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">Hold Company Email</a>
+  <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">DS Hernandez</a>
   <!--a href="javascript:void(0)" onclick="emailSend()">Hold Company Email</a-->
 </p>
 <details><summary>iPhone users</summary>
