--- a/index.html
+++ b/index.html
@@ -296,11 +296,12 @@ border: solid 2px;
   <label for="smNGARState">NG/AR State (two letter) :</label>
   <input type="text" id="smNGARState" list="usStates">
   <br>
-  <details>
+  <details open>
     <summary><label for="smUnitPrev">Prev. Unit:</label>
     <input type="text" id="smUnitPrev" list="armyUnits">
     </summary>
-    <p>If you know the Company and Battallion, type them. Otherwise, just type the Instalation (Fort).</p>
+    <p>If you know the Company and Battallion, type them. Otherwise, just type the Instalation (Fort).
+    <br>ex. A-12, Fort Jackson, SC</p>
   </details>
   
   <br>
