--- a/index.html
+++ b/index.html
@@ -1751,7 +1751,7 @@ function jsonLoad(src){
   document.getElementById("smNGARState").value = ("smNGARState" in j) ? j.smNGARState.trim() : "";
   document.getElementById("smUnitPrev").value = ("smUnitPrev" in j) ? j.smUnitPrev.trim() : "";
   
-  document.getElementById("smDateArrival").value = ("smDateArrival" in j) ? j.smDateArrival : "";
+  document.getElementById("smDateArrival").value = ("smDateArrival" in j) ? j.smDateArrival.trim() : "";
   document.getElementById("smDateDOB").value = ("smDateDOB" in j) ? j.smDateDOB.trim() : "";
   document.getElementById("smDateDOR").value = ("smDateDOR" in j) ? j.smDateDOR.trim() : "";
   document.getElementById("smDateBASD").value = ("smDateBASD" in j) ? j.smDateBASD.trim() : "";
