--- a/index.html
+++ b/index.html
@@ -1830,7 +1830,7 @@ function jsonLoad(src){
   document.getElementById("nok2Phone").value = ("nok2Phone" in j) ? j.nok2Phone.trim() : "";
   document.getElementById("nok2Email").value = ("nok2Email" in j) ? j.nok2Email.trim() : "";
   document.getElementById("nok2Address").value = ("nok2Address" in j) ? j.nok2Address.trim() : "";
-  document.getElementById("nok2City").value = ("nok2City" in j) ? j.nok2City : "";
+  document.getElementById("nok2City").value = ("nok2City" in j) ? j.nok2City.trim() : "";
   document.getElementById("nok2State").value = ("nok2State" in j) ? j.nok2State.trim() : "";
   document.getElementById("nok2Zip").value = ("nok2Zip" in j) ? j.nok2Zip.trim() : "";
   
