--- a/index.html
+++ b/index.html
@@ -96,18 +96,42 @@ border: solid 2px;
   <option value="None">
   <option value="Christian">
   <option value="Catholic">
-  <option value="LDS">
-  <option value="Mormon">
-  <option value="Islam">
+  <option value="Agnostic">
+  <option value="Atheist">
+  <option value="Baptist">
   <option value="Buddhist">
+  <option value="Child of God">
+  <option value="Islam">
   <option value="Jewish">
+  <option value="LDS">
+  <option value="Methodist">
+  <option value="Mormon">
+  <option value="Orthodox">
+  <option value="Pagan">
+  <option value="Presbyterian">
+  <option value="Wiccan">
 </datalist>
 <datalist id="Allergies">
   <option value="None">
-  <option value="Nuts">
+  <option value="Amoxicillin">
+  <option value="Bees">
+  <option value="Eggs">
+  <option value="Fish">
+  <option value="Grass">
   <option value="Latex">
-  <option value="Sea food">
+  <option value="Milk">
+  <option value="Mold">
+  <option value="Peanuts">
+  <option value="Penicillin">
   <option value="Pollen">
+  <option value="Sesame">
+  <option value="Shellfish">
+  <option value="Soy">
+  <option value="Sulfa drugs">
+  <option value="Tree nut">
+  <option value="Turmeric">
+  <option value="Wasps">
+  <option value="Wheat">
 </datalist>
 <datalist id="MealPref">
   <option value="No Preference">
